--- a/main/res/menu/view_settings.xml
+++ b/main/res/menu/view_settings.xml
@@ -11,4 +11,13 @@
         tools:ignore="AlwaysShowAction">
     </item>
 
+    <item
+        android:id="@+id/view_settings_add"
+        android:icon="@drawable/ic_menu_add"
+        android:title="@string/add_setting"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction"
+        android:visible="false">
+    </item>
+
 </menu>
