add auto-target option for individual routes on OSM (rel. to #9281)

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -288,6 +288,12 @@
                 android:title="@string/map_load_individual_route">
             </item>
             <item
+                android:id="@+id/menu_autotarget_individual_route"
+                android:checkable="true"
+                android:title="@string/map_autotarget_individual_route"
+                android:visible="false">
+            </item>
+            <item
                 android:id="@+id/menu_sort_individual_route"
                 android:title="@string/map_sort_individual_route"
                 android:visible="false">
