--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -21,6 +21,7 @@
 <li>New: Ask for filename on individual route export</li>
 <li>New: Added share option after creating a backup</li>
 <li>New: View settings: Added option to add new settings</li>
+<li>New: Added Ukrainian translation</li>
 <li>Fix: Open about activity on click at c:geo\'s logo</li>
 </ul>
 </div>]]></Data>
