--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -23,6 +23,7 @@
 <li>New: View settings: Added option to add new settings</li>
 <li>New: Added Ukrainian translation</li>
 <li>Fix: Open about activity on click at c:geo\'s logo</li>
+<li>Fixed several theming issues</li>
 </ul>
 </div>]]></Data>
   </string>
