--- a/main/res/layout/map_mapsforge_v6.xml
+++ b/main/res/layout/map_mapsforge_v6.xml
@@ -21,8 +21,6 @@
             android:enabled="true"
             android:keepScreenOn="true" />
 
-        <include layout="@layout/map_distanceinfo" />
-
         <ImageView
             android:id="@+id/map_attribution"
             android:layout_width="20dp"
@@ -36,6 +34,8 @@
             android:src="@drawable/copyright"
             tools:src="@drawable/copyright"/>
 
+        <include layout="@layout/map_distanceinfo" />
+        <include layout="@layout/map_settings_button" />
         <include layout="@layout/map_progressbar" />
 
     </RelativeLayout>
