--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -8,8 +8,8 @@
 <ul>
 <li>Change: Renamed \"Hide individual track\" to \"Hide GPX track/route\" for consistency</li>
 <li>Fix: Skip artificial track points in position history</li>
-<li>New: Add option to "Individual route" map menu to automatically set the first route point as navigation target. (OpenStreetMap only)</li>
-<li>New: \"Quick settings\" icon in the map's bottom center giving access to several map settings</li>
+<li>New: Add option to \"Individual route\" map menu to automatically set the first route point as navigation target. (OpenStreetMap only)</li>
+<li>New: \"Quick settings\" icon in the map\'s bottom center giving access to several map settings</li>
 </ul>
 
 <h4>Cache details:</h4>
