fixes checkbox not working when directly clicking on it

--- a/main/res/layout/map_settings_item.xml
+++ b/main/res/layout/map_settings_item.xml
@@ -23,6 +23,7 @@
         android:layout_centerVertical="true" />
     <CheckBox
         android:id="@+id/settings_item_checkbox"
+        android:clickable="false"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
