--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -6,10 +6,10 @@
 
 <h4>Map:</h4>
 <ul>
-<li>Change: Renamed \"Hide individual track\" to \"Hide GPX track/route\" for consistency</li>
+<li>New: \"Quick settings\" icon in the map\'s bottom center giving access to several map settings</li>
+<li>Change: Removed \"Map settings\", \"Hide\" and \"Routing\" menu entries in favor of the new \"Quick settings\" popup</li>
 <li>Fix: Skip artificial track points in position history</li>
 <li>New: Add option to \"Individual route\" map menu to automatically set the first route point as navigation target. (OpenStreetMap only)</li>
-<li>New: \"Quick settings\" icon in the map\'s bottom center giving access to several map settings</li>
 </ul>
 
 <h4>Cache details:</h4>
