adjust contrasts in map quick settings dialog

--- a/main/res/layout/map_settings_item.xml
+++ b/main/res/layout/map_settings_item.xml
@@ -18,6 +18,7 @@
         android:lines="1"
         android:maxLines="2"
         android:ellipsize="end"
+        android:textColor="?text_color"
         android:layout_marginLeft="46dp"
         android:layout_marginRight="30dp"
         android:layout_centerVertical="true" />
