--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -6,6 +6,7 @@
 
 <h4>Map:</h4>
 <ul>
+<li>Please note, that your map selection will be reset due to the need of some internal changes in preparation for more Android 11 compatibility. This will happen once after upgrading to this version, and you can select the map of your choice after that. We apologize for any inconvenience.</li>
 <li>New: \"Quick settings\" icon in the map\'s bottom center giving access to several map settings</li>
 <li>Change: Removed \"Map settings\", \"Hide\" and \"Routing\" menu entries in favor of the new \"Quick settings\" popup</li>
 <li>Fix: Skip artificial track points in position history</li>
