--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -12,6 +12,7 @@ There are no known issues for using c:geo with Android 11. If you notice any pro
 <li>New: Added dialog to report database errors to support</li>
 <li>Fix: Fixed several smaller crashes</li>
 <li>Fix: Use local time of Geokrety server for logging a Geokrety</li>
+<li>Fix: Apply colorAccent to Google Maps for a more consistent theming</li>
 </ul>
 
 <h1>2020.12.03:</h1>
