--- a/main/res/values/themes.xml
+++ b/main/res/values/themes.xml
@@ -215,6 +215,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:alertDialogTheme">@style/Dialog_Alert</item>
         <item name="text_color">@color/text_dark</item>
+        <item name="button">@drawable/action_button_dark</item>
     </style>
 
     <style name="settings.light" parent="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
@@ -233,6 +234,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:alertDialogTheme">@style/Dialog_Alert_light</item>
         <item name="text_color">@color/text_light</item>
+        <item name="button">@drawable/action_button_light</item>
     </style>
 
     <style name="Dialog_Alert" parent="@style/Theme.AppCompat.Dialog.Alert">
