--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -1129,17 +1129,20 @@
                 android:summary="@string/init_backup_logins_summary" />
             <Preference
                 android:key="@string/pref_fakekey_preference_backup"
-                android:title="@string/init_backup_now" />
+                android:title="@string/init_backup_now"
+                android:layout="@layout/preference_button" />
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/init_restore_title"
             android:layout="@layout/preference_category">
             <Preference
                 android:key="@string/pref_fakekey_preference_restore"
-                android:title="@string/init_backup_start_restore" />
+                android:title="@string/init_backup_start_restore"
+                android:layout="@layout/preference_button" />
             <Preference
                 android:key="@string/pref_fakekey_preference_restore_dirselect"
-                android:title="@string/init_backup_restore_different_backup" />
+                android:title="@string/init_backup_restore_different_backup"
+                android:layout="@layout/preference_button" />
         </PreferenceCategory>
     </PreferenceScreen>
 
