--- a/main/res/layout/preference_button.xml
+++ b/main/res/layout/preference_button.xml
@@ -6,10 +6,9 @@
     android:orientation="vertical"
     android:descendantFocusability="blocksDescendants">
     <TextView android:id="@android:id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/button"
+        style="@style/button_full"
         android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
         android:layout_marginTop="10dp"
         android:textSize="16sp"
         android:clickable="false" />
