--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -495,6 +495,11 @@
             android:key="@string/pref_useenglish"
             android:summary="@string/init_summary_useenglish"
             android:title="@string/init_useenglish" />
+        <EditTextPreference
+            android:defaultValue=""
+            android:key="@string/pref_userLocale"
+            android:title="@string/init_userlocale"
+            android:summary="@string/init_summary_userlocale" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_units_imperial"
