--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -15,6 +15,7 @@
 <li>New: Ask for filename on individual route export</li>
 <li>New: Display a blue emoji for caches which are logged as DNF</li>
 <li>New: Allow setting navigation target from cache/waypoint popup for Google Maps (already existed for OpenStreetMap maps)</li>
+<li>Fix: Clear orphaned proximity circles on Google Maps</li>
 </ul>
 
 <h4>Cache details:</h4>
