--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -47,7 +47,7 @@
     <string translatable="false" name="contributors_recent">
     baiti|https://github.com/baiti|c|
     Bananeweizen||c|
-    bekuno||c|
+    bekuno|https://github.com/bekuno|c|
     bmuzzin|https://github.com/bmuzzin|c|
     capoaira|https://github.com/capoaira|c|
     eddiemuc|https://github.com/eddiemuc|c|
