update authorization activity icon

--- a/main/res/layout/authorization_credentials_activity.xml
+++ b/main/res/layout/authorization_credentials_activity.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="20dip"
             android:layout_marginLeft="10dip"
             android:layout_marginRight="10dip"
-            android:drawableLeft="@drawable/cgeo"
+            android:drawableLeft="@drawable/cgeo_actionbar_squircle"
             android:drawablePadding="15dip"
             android:gravity="left|center_vertical"
             android:textColor="?text_color"
